--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     padding: 20px;
     width: 300px;
 }
@@ -44,6 +44,10 @@ button {
     background-color: transparent;
     cursor: pointer;
     width: 100%;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 button:hover {
@@ -68,4 +72,75 @@ button:hover {
 
 .hidden {
     display: none;
+}
+
+input#searchInput {
+    width: 300px;
+    /* padding: 10px; */
+    margin-right: 5px;
+    border: none;
+    outline: none;
+    color: #ccc;
+}
+
+#result {
+    margin-top: 10px;
+    text-align: left;
+    height: 100px;
+    overflow: hidden;
+}
+
+#result div {
+    margin-bottom: 15px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+.search {
+    height: 70px;
+}
+
+/* From Uiverse.io by Fernando-sv */
+.loader {
+    border: 4px solid #dc3545;
+    border-left-color: transparent;
+    border-radius: 50%;
+}
+
+.loader {
+    border: 4px solid #dc3545;
+    border-left-color: transparent;
+    width: 30px;
+    height: 30px;
+}
+
+.loader {
+    border: 4px solid #dc3545;
+    border-left-color: transparent;
+    width: 30px;
+    height: 30px;
+    animation: spin89345 1s linear infinite;
+}
+
+@keyframes spin89345 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.disable {
+    pointer-events: none;
+    opacity: 0.5;
+    border: 1px solid #ccc;
+    color: #ccc;
+}
+
+.result-container {
+    color: #ccc;
 }
